--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "morgan": "^1.9.1"
+    "global": "^4.4.0",
+    "morgan": "^1.9.1",
+    "now": "^16.2.0"
   },
   "scripts": {
     "start": "nodemon index.js"
