--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "client-install"  : "cd client && yarn install",
     "server-install"  : "cd server && yarn install",
-    "install-all-deps": "concurrently \"npm run server-install\" \"npm run client-install\""
+    "install-all-deps": "concurrently \"npm run server-install\" \"npm run client-install\"",
+    "start-server" : "cd server && node index.js",
+    "start-client" : "cd client && yarn start",
+    "start-full-app" :  "concurrently \"yarn start-server\" \"yarn start-client\""
 }
 }
